@@ -1,17 +1,16 @@
 package com.cloudmine.api;
 
-import com.cloudmine.api.exceptions.ConversionException;
-import com.cloudmine.api.exceptions.CreationException;
-import com.cloudmine.api.rest.Transportable;
+import com.cloudmine.api.rest.TransportableString;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
- * A CMObject that has location information associated with it. This allows you to perform
- * geographic searches for this data. For more information, including search information, view the
- * <a href="https://cloudmine.me/docs/object-storage#query_geof">CloudMine geo query documentation</a>
- * <br>Copyright CloudMine LLC. All rights reserved<br>
- *     See LICENSE file included with SDK for details.
+ * <br>
+ * Copyright CloudMine LLC. All rights reserved<br>
+ * See LICENSE file included with SDK for details.
  */
-public class CMGeoPoint extends SimpleCMObject {
+public class CMGeoPoint extends CMObject{
+    private static final Logger LOG = LoggerFactory.getLogger(CMGeoPoint.class);
     private static final String[] LATITUDE_KEYS = {"latitude", "lat", "y"};
     private static final String[] LONGITUDE_KEYS = {"longitude", "lon", "x"};
     public static final String GEOPOINT_CLASS = "CMGeoPoint";
@@ -19,93 +18,83 @@ public class CMGeoPoint extends SimpleCMObject {
     public static final String LATITUDE_KEY = "latitude";
     public static final String CLASS_NAME = "geopoint";
 
+    @Js
+    private double latitude;
+    private double longitude;
+    private final String __type__ = "geopoint";
 
-    /**
-     * Instantiate a CMGeoPoint with the given latitude and longitude and a random unique objectId
-     * @param longitude a double between [-180, 180)
-     * @param latitude a double between [-90, 90]
-     * @return a new CMGeoPoint
-     */
-    public CMGeoPoint(double longitude, double latitude) throws CreationException {
-        super(false);
-        setClass(GEOPOINT_CLASS);
-        setType(CMType.GEO_POINT);
-        add(LONGITUDE_KEY, longitude);
-        add(LATITUDE_KEY, latitude);
+    protected CMGeoPoint() {
+
     }
 
-    /**
-     * Instantiate a new CMGeoPoint based on the given transportable. The transportable must include a top level key, a "__type__":"geopoint" property,
-     * and a latitude and longitude.
-     * @param transportable a valid transportable representation of a CMGeoPoint
-     * @throws CreationException if given improperly formated transportable; either malformed or lacking a __type__, latitude, or longitude.
-     */
-    public CMGeoPoint(Transportable transportable) throws ConversionException, CreationException {
-        super(transportable, false);
-        boolean isMissingAnything = !(isType(CMType.GEO_POINT) && hasLatitude() && hasLongitude());
-        if(isMissingAnything) {
-            throw new ConversionException("Given non geopoint class to construct geopoint: " + transportable);
+    public CMGeoPoint(double longitude, double latitude) {
+        this.latitude = latitude;
+        this.longitude = longitude;
+    }
+
+    public CMGeoPoint(TransportableString transportableString) {
+        //is this hacky? yes it is!
+        SimpleCMObject object = new SimpleCMObject(transportableString);
+        this.latitude = getValueFromKey(object, LATITUDE_KEYS);
+        this.longitude = getValueFromKey(object, LONGITUDE_KEYS);
+    }
+
+    private double getValueFromKey(SimpleCMObject object, String[] keys) {
+        for(String key : keys) {
+            Double keyValue = object.getDouble(key);
+            if(keyValue != null)
+                return keyValue.doubleValue();
         }
-        setClass(GEOPOINT_CLASS);
-        setType(CMType.GEO_POINT);
-    }
-
-    public CMGeoPoint() {
-        super(false);
-    }
-
-    private boolean hasLatitude() {
-        return hasKeyNumber(LATITUDE_KEYS);
-    }
-
-    private boolean hasLongitude() {
-        return hasKeyNumber(LONGITUDE_KEYS);
-    }
-
-    private boolean hasKeyNumber(String[] keys) {
-        for(int i = 0; i < keys.length; i++) {
-            Object toGet = get(keys[i]);
-            if(toGet != null && toGet instanceof Number) {
-                return true;
-            }
-        }
-        return false;
-    }
-
-    /**
-     * Get the longitude
-     * @return the longitude
-     * @throws ConversionException if there is a longitude value, but it is not a double
-     */
-    public double getLongitude() throws ConversionException {
-        return getDouble(LONGITUDE_KEYS);
-    }
-
-    /**
-     * Get the latitude
-     * @return the latitude
-     * @throws ConversionException if there is a latitude value, but it is not a double
-     */
-    public double getLatitude() throws ConversionException {
-        return getDouble(LATITUDE_KEYS);
-    }
-
-    /**
-     * A string representation of this GeoPoint
-     * @return longitude, latitude
-     * @throws ConversionException if a latitude/longitude value exists, but are not doubles
-     */
-    public String getLocationString() throws ConversionException {
-        return getLongitude() + ", " + getLatitude();
+        LOG.error("No value found for keys, using 0.0");
+        return 0;
     }
 
     @Override
     public String getClassName() {
-        if(getClass() == CMGeoPoint.class) //this way if someone extends this, it will not say this is a CMGeoPoint, but whatever their subclass is
-            return CLASS_NAME;
-        return super.getClassName();
+        return CMGeoPoint.GEOPOINT_CLASS;
     }
 
+    public String get__type__() {
+        return __type__;
+    }
 
+    public double getLatitude() {
+        return latitude;
+    }
 
+    public void setLatitude(double latitude) {
+        this.latitude = latitude;
+    }
+
+    public double getLongitude() {
+        return longitude;
+    }
+
+    public void setLongitude(double longitude) {
+        this.longitude = longitude;
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;
+
+        CMGeoPoint geoPoint = (CMGeoPoint) o;
+
+        if (Double.compare(geoPoint.latitude, latitude) != 0) return false;
+        if (Double.compare(geoPoint.longitude, longitude) != 0) return false;
+
+        return true;
+    }
+
+    @Override
+    public int hashCode() {
+        int result;
+        long temp;
+        temp = latitude != +0.0d ? Double.doubleToLongBits(latitude) : 0L;
+        result = (int) (temp ^ (temp >>> 32));
+        temp = longitude != +0.0d ? Double.doubleToLongBits(longitude) : 0L;
+        result = 31 * result + (int) (temp ^ (temp >>> 32));
+        return result;
+    }
 }
